Destination BigQuery:  Adapt to newer interface for Sync operations (#38132)